--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "angular-ts-decorators",
-  "version": "3.7.8",
+  "name": "ng-decorators",
+  "version": "1.0.0",
   "license": "MIT",
   "author": {
-    "name": "Vlad Sternbach",
-    "email": "vlad.sternbach@gmail.com",
-    "url": "https://github.com/vsternbach"
+    "name": "NicolasLOJO",
+    "email": "niko34310@gmail.com",
+    "url": "https://github.com/NicolasLOJO"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vsternbach/angular-ts-decorators.git"
+    "url": "git+https://github.com/NicolasLOJO/ng-decorator.git"
   },
-  "homepage": "https://github.com/vsternbach/angular-ts-decorators",
+  "homepage": "https://github.com/NicolasLOJO/ng-decorator",
   "keywords": [
     "angular decorators",
     "angular-decorators",
@@ -22,8 +22,8 @@
     "angular-ts-decorators",
     "angular typescript decorators",
     "angular-typescript-decorators",
-    "anguarjs decorators",
-    "anguarjs-decorators"
+    "angularjs decorators",
+    "angularjs-decorators"
   ],
   "main": "angular-ts-decorators.umd.js",
   "module": "angular-ts-decorators.js",
@@ -31,31 +31,33 @@
   "types": "types/index.d.ts",
   "dependencies": {
     "reflect-metadata": "0.1.13",
-    "tslib": "1.10.0"
+    "tslib": "2.3.1"
   },
   "devDependencies": {
-    "@types/angular": "^1.6.54",
-    "@types/jasmine": "^3.3.12",
-    "@types/node": "^12.0.2",
-    "angular": "^1.7.8",
-    "angular-mocks": "^1.7.8",
-    "copyfiles": "^2.1.0",
-    "coveralls": "^3.0.3",
-    "jasmine-core": "^3.4.0",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.2",
-    "karma-jasmine": "^2.0.1",
-    "karma-typescript": "^4.0.0",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.12.3",
-    "standard-version": "^6.0.1",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5",
+    "@types/angular": "^1.8.4",
+    "@types/jasmine": "^4.0.2",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "angular": "^1.8.2",
+    "angular-mocks": "^1.8.2",
+    "copyfiles": "^2.4.1",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.12.0",
+    "jasmine-core": "^4.0.1",
+    "karma": "^6.3.17",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^4.0.2",
+    "karma-typescript": "^5.5.3",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.70.1",
+    "standard-version": "^9.3.2",
+    "typescript": "^4.6.3",
     "uglify-es": "^3.3.9"
   },
   "peerDependencies": {
-    "angular": ">=1.5.0",
+    "angular": ">=1.4.0",
     "typescript": ">=2.2.0"
   },
   "scripts": {
