--- a/package.json
+++ b/package.json
@@ -1,73 +1,78 @@
 {
-  "name": "ng-decorators",
-  "version": "1.0.0",
-  "license": "MIT",
-  "author": {
-    "name": "NicolasLOJO",
-    "email": "niko34310@gmail.com",
-    "url": "https://github.com/NicolasLOJO"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NicolasLOJO/ng-decorator.git"
-  },
-  "homepage": "https://github.com/NicolasLOJO/ng-decorator",
-  "keywords": [
-    "angular decorators",
-    "angular-decorators",
-    "typescript decorators",
-    "typescript-decorators",
-    "decorators",
-    "angular ts decorators",
-    "angular-ts-decorators",
-    "angular typescript decorators",
-    "angular-typescript-decorators",
-    "angularjs decorators",
-    "angularjs-decorators"
-  ],
-  "main": "angular-ts-decorators.umd.js",
-  "module": "angular-ts-decorators.js",
-  "jsnext:main": "angular-ts-decorators.js",
-  "types": "types/index.d.ts",
-  "dependencies": {
-    "reflect-metadata": "0.1.13",
-    "tslib": "2.3.1"
-  },
-  "devDependencies": {
-    "@types/angular": "^1.8.4",
-    "@types/jasmine": "^4.0.2",
-    "@types/node": "^17.0.23",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "angular": "^1.8.2",
-    "angular-mocks": "^1.8.2",
-    "copyfiles": "^2.4.1",
-    "coveralls": "^3.1.1",
-    "eslint": "^8.12.0",
-    "jasmine-core": "^4.0.1",
-    "karma": "^6.3.17",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-jasmine": "^4.0.2",
-    "karma-typescript": "^5.5.3",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.70.1",
-    "standard-version": "^9.3.2",
-    "typescript": "^4.6.3",
-    "uglify-es": "^3.3.9"
-  },
-  "peerDependencies": {
-    "angular": ">=1.4.0",
-    "typescript": ">=2.2.0"
-  },
-  "scripts": {
-    "clean": "rimraf dist coverage",
-    "test": "karma start --single-run",
-    "test:dev": "karma start",
-    "posttest": "cat ./coverage/lcov.info | coveralls",
-    "build": "npm run clean && tsc && rollup -c && npm run uglify && copyfiles package.json README.md CHANGELOG.md LICENSE dist/ && rimraf dist/temp",
-    "uglify": "for f in dist/*.js; do ./node_modules/uglify-es/bin/uglifyjs $f --compress drop_console --mangle --output ${f%.js}.min.js; done",
-    "release": "standard-version",
-    "postrelease": "git push origin master --follow-tags"
-  }
+    "name": "@nicolaslojo/ng-decorator",
+    "version": "3.7.9",
+    "license": "MIT",
+    "author": {
+        "name": "NicolasLOJO",
+        "email": "niko34310@gmail.com",
+        "url": "https://github.com/NicolasLOJO"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/NicolasLOJO/ng-decorator.git"
+    },
+    "homepage": "https://github.com/NicolasLOJO/ng-decorator",
+    "keywords": [
+        "angular decorators",
+        "angular-decorators",
+        "typescript decorators",
+        "typescript-decorators",
+        "decorators",
+        "angular ts decorators",
+        "angular-ts-decorators",
+        "angular typescript decorators",
+        "angular-typescript-decorators",
+        "angularjs decorators",
+        "angularjs-decorators"
+    ],
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "browser": "dist/ng-decorator.min.js",
+    "types": "types/index.d.ts",
+    "files": ["dist"],
+    "dependencies": {
+        "reflect-metadata": "0.1.13",
+        "tslib": "2.3.1"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^21.0.3",
+        "@rollup/plugin-node-resolve": "^13.1.3",
+        "@rollup/plugin-typescript": "^8.3.1",
+        "@types/angular": "^1.8.4",
+        "@types/jasmine": "^4.0.2",
+        "@types/node": "^17.0.23",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "angular": "^1.8.2",
+        "angular-mocks": "^1.8.2",
+        "copyfiles": "^2.4.1",
+        "coveralls": "^3.1.1",
+        "eslint": "^8.12.0",
+        "eslint-config-prettier": "^8.5.0",
+        "jasmine-core": "^4.0.1",
+        "karma": "^6.3.17",
+        "karma-chrome-launcher": "^3.1.1",
+        "karma-coverage": "^2.2.0",
+        "karma-jasmine": "^4.0.2",
+        "karma-typescript": "^5.5.3",
+        "prettier": "2.6.2",
+        "rimraf": "^3.0.2",
+        "rollup": "^2.70.1",
+        "rollup-plugin-terser": "^7.0.2",
+        "standard-version": "^9.3.2",
+        "typescript": "^4.6.3"
+    },
+    "peerDependencies": {
+        "angular": ">=1.4.0",
+        "typescript": ">=2.2.0"
+    },
+    "scripts": {
+        "clean": "rimraf dist coverage",
+        "test": "karma start --single-run",
+        "test:dev": "karma start",
+        "posttest": "cat ./coverage/lcov.info | coveralls",
+        "build": "npm run clean && rollup -c",
+        "release": "standard-version",
+        "postrelease": "git push origin master --follow-tags"
+    }
 }
