--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,11 +1,4 @@
 {
-  "compilerOptions": {
-    "sourceMap": true,
-    "inlineSources": true,
-    "pretty": true
-  },
-  "exclude": [
-    "dist",
-    "node_modules"
-  ]
+    "compilerOptions": {},
+    "exclude": ["dist", "node_modules"]
 }
